Refactored packages and removed unused getters/setters